# litkit

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
discover/: README.md
discover/references/: output-schema.md  search-config-example.json
discover/scripts/: config.py  merge_and_rank.py  run_scout.py  scout_arxiv.py  scout_biorxiv.py  scout_pubmed.py  scout_rss.py  scout_semantic.py  scout_utils.py
manage/: README.md
manage/scripts/: enrich_metadata.py
notes/: README.md
notes/references/: annotation-prompt.md  categories-example.md
scripts/: download.sh
search/: README.md
search/references/: query-patterns.md  setup.md
search/scripts/: config.py  ingest.py  search.py
src/litkit/: __init__.py  cli.py  config.py  mcp_server.py
src/litkit/discover/: __init__.py  orchestrator.py  rank.py
src/litkit/discover/sources/: __init__.py  arxiv.py  biorxiv.py  common.py  pubmed.py  rss.py  semantic.py
src/litkit/manage/: __init__.py  enrich.py  shell.py
src/litkit/notes/: __init__.py  loader.py
src/litkit/notes/references/: __init__.py  annotation-prompt.md
src/litkit/notes/templates/: __init__.py  note-template.md
src/litkit/search/: __init__.py  ingest.py  query.py
