[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "litkit"
version = "0.2.0"
description = "A literature toolkit (discover, manage, notes, search) usable as a CLI and as an MCP server for AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Meng-Xuan Liu" },
]
keywords = [
    "literature",
    "academic-search",
    "mcp",
    "model-context-protocol",
    "pubmed",
    "arxiv",
    "biorxiv",
    "semantic-scholar",
    "semantic-search",
    "bge-m3",
    "qdrant",
    "bm25",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Indexing",
]
# The core install ships the orchestration code only; each stage pulls its own
# heavier dependencies through the optional extras below. Heavy deps are imported
# lazily, so `import litkit` (and the MCP server) work without any extra.
dependencies = []

[project.optional-dependencies]
# Stage 1 — discover: multi-source paper discovery + ranking.
discover = [
    "biopython",   # PubMed (Bio.Entrez)
    "requests",    # bioRxiv REST API
    "feedparser",  # journal RSS feeds
]
# Optional Stage-2 corpus-affinity re-ranking for discover.
discover-rerank = [
    "sentence-transformers",
    "numpy",
]
# Stage 2 — manage: metadata enrichment (download/convert/audit use system
# tools: curl, pdftotext, file, optional uvx markitdown).
manage = [
    "requests",    # Semantic Scholar metadata enrichment
]
# Stage 3 — search: local hybrid semantic search.
search = [
    "docling",
    "FlagEmbedding",
    "qdrant-client",
]
# MCP server — FastMCP ships in the `mcp` package.
mcp = [
    "mcp",
]
# Everything.
all = [
    "litkit[discover]",
    "litkit[discover-rerank]",
    "litkit[manage]",
    "litkit[search]",
    "litkit[mcp]",
]

[project.scripts]
litkit-discover = "litkit.cli:discover_main"
litkit-search = "litkit.cli:search_main"
litkit-ingest = "litkit.cli:ingest_main"
litkit-enrich = "litkit.cli:enrich_main"
litkit-mcp = "litkit.mcp_server:main"

[project.urls]
Homepage = "https://github.com/IsonaEi/litkit"
Repository = "https://github.com/IsonaEi/litkit"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Ship the bundled markdown + the discover search-config example as package data
# so importlib.resources can read them from an installed wheel.
"litkit.notes.templates" = ["*.md"]
"litkit.notes.references" = ["*.md"]
"litkit.discover" = ["*.json"]
